- allow ZSK and KSK keys to be created without signing
- switch default algorithm to alg 13 (elliptic curve) instead of alg 8 (RSA)
- not specifying a tsigkey in rzone should now imply NOKEY
- multiple RRSIG's are now working without bugs
- fixed the random time restart algorithm to restart at only 1 desired time
  which increases the odds that replicants won't do it at the same time.

Changes in RELEASE_1_4 from RELEASE_1_3

- dddctl can now count records in configtest
- dddctl can axfr zones, and query other dns data
- the database has been replaced with the 3G DB (3rd generation internal db)
- fixed logic leading up to DNSSEC NODATA ENT replies
- FreeLogic from Russia, offered an unalignment fix affecting rrlimit
- TSIG AXFR's and other TSIG support is now workin
- increased TXT's size from 255 to 1024 (for DKIM)
- TCP now doesn't block upon connect, it will close connections at 64 limit
- refactored the axfr with finer grained control with the mzone keyword
- added algorithm 13 in dddctl, for signing elliptic curves and conforming to
  RFC 8624
- change the default configfile to /etc/delphinusdns/delphinusdns.conf and
  update documentation for this
- add -X and -x argument for setting the serial automatically overriding what
  is in the zonefile
- refused answers now tag on the question, and add on a possible EDNS0 tag,
  which it did not do before.
- fixed referrer NS code with plain subzones incorporating some DNSSEC elements
- remote logging (which was added in BETA_7) has been removed
- last minute change:  teach delphinusdnsd and dddctl to answer multiple TXT's
  per domain name.


Changes in RELEASE_1_3 from RELEASE_1_2
- created a "zinclude" config, which will only allow zone files to be 
	included and nothing else inside that. 
- created a manpage for dddctl
- fixed a timeout issue with notify hosts, refactored code (axfr.c)
- replaced dd-convert with dddctl which is a utility that can do a bit more,
  including dnssec key roll-over with ZSK key.