@@ -1,4 +1,4 @@
-.\" Copyright (c) 2014-2019 Peter J. Philipp
+.\" Copyright (c) 2014-2020 Peter J. Philipp
 .\" All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -60,6 +60,7 @@ options "cool stuff" {
 	;fork 2;
 	log;
 	;dnssec;
+	;tcp-on-any-only;
 }
 
 axfrport "10053";
@@ -215,13 +216,14 @@ comment = ( ; | pound ) line
 
 options = "options" ("string") [ "{" optionlist "}" ]
 optionlist = ( optrecurse | optinterface | optfork | optport | 
-		optratelimit | optbind | optdnssec )
+		optratelimit | optbind | optdnssec | opttcponanyonly)
 optrecurse = "recurse" ;
 optinterface = "interface" ("string") ;
 optfork = "fork" number ; 
 optratelimit = "ratelimit-pps" number ; 
 optbind = "bind" cidr-address ;
 optdnssec = "dnssec" ; 
+opttcponanyonly = "tcp-on-any-only" ;
 
 .Ed
 .Sh FILES
